Revised Top Spots

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 </head>
 
 <body>
-  <table id="topSpotsTable" style="width:100%">
+  <table id="topSpotsTable">
     <tr>
       <th>Name</th>
       <th>Description</th>
       <th>Loaction</th>
     </tr>
-  
+
 
   </table>
 
